tests/baselines/reference/cloduleTest2.errors.txt
cloduleTest2.ts(4,13): error TS2554: Expected 1 arguments, but got 0.
cloduleTest2.ts(10,13): error TS2554: Expected 1 arguments, but got 0.
cloduleTest2.ts(18,7): error TS2576: Property 'bar' does not exist on type 'm3d'. Did you mean to access the static member 'm3d.bar' instead?
cloduleTest2.ts(19,7): error TS2339: Property 'y' does not exist on type 'm3d'.
cloduleTest2.ts(27,7): error TS2576: Property 'bar' does not exist on type 'm3d'. Did you mean to access the static member 'm3d.bar' instead?
cloduleTest2.ts(28,7): error TS2339: Property 'y' does not exist on type 'm3d'.
cloduleTest2.ts(33,9): error TS2554: Expected 1 arguments, but got 0.
cloduleTest2.ts(36,10): error TS2554: Expected 1 arguments, but got 0.


==== cloduleTest2.ts (8 errors) ====
    module T1 {
        module m3d { export var y = 2; }
        declare class m3d { constructor(foo); foo(): void ; static bar(); }
        var r = new m3d(); // error
                ~~~~~~~~~
!!! error TS2554: Expected 1 arguments, but got 0.
!!! related TS6210 cloduleTest2.ts:3:37: An argument for 'foo' was not provided.
    }
    
    module T2 {
        declare class m3d { constructor(foo); foo(): void; static bar(); }
        module m3d { export var y = 2; }
        var r = new m3d(); // error
                ~~~~~~~~~
!!! error TS2554: Expected 1 arguments, but got 0.
!!! related TS6210 cloduleTest2.ts:8:37: An argument for 'foo' was not provided.
    }
    
    module T3 {
        module m3d { export var y = 2; }
        declare class m3d { foo(): void; static bar(); }
        var r = new m3d();
        r.foo();
        r.bar(); // error
          ~~~
!!! error TS2576: Property 'bar' does not exist on type 'm3d'. Did you mean to access the static member 'm3d.bar' instead?
        r.y; // error
          ~
!!! error TS2339: Property 'y' does not exist on type 'm3d'.
    }
    
    module T4 {
        declare class m3d { foo(): void; static bar(); }
        module m3d { export var y = 2; }
        var r = new m3d();
        r.foo();
        r.bar(); // error
          ~~~
!!! error TS2576: Property 'bar' does not exist on type 'm3d'. Did you mean to access the static member 'm3d.bar' instead?
        r.y; // error
          ~
!!! error TS2339: Property 'y' does not exist on type 'm3d'.
    }
    
    module m3d { export var y = 2; }
    declare class m3d { constructor(foo); foo(): void; static bar(); }
    var r = new m3d(); // error
            ~~~~~~~~~
!!! error TS2554: Expected 1 arguments, but got 0.
!!! related TS6210 cloduleTest2.ts:32:33: An argument for 'foo' was not provided.
    
    declare class m4d extends m3d { }
    var r2 = new m4d(); // error
             ~~~~~~~~~
!!! error TS2554: Expected 1 arguments, but got 0.
!!! related TS6210 cloduleTest2.ts:32:33: An argument for 'foo' was not provided.